--- a/FreeCodeCamp/freecodecamp.html
+++ b/FreeCodeCamp/freecodecamp.html
@@ -11,11 +11,11 @@
     <title>Erind Hoxha - Get Work Done</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- Custom styles for this template -->
-    <link href="css/3-col-portfolio.css" rel="stylesheet">
+    <link href="../css/3-col-portfolio.css" rel="stylesheet">
 
   </head>
 
@@ -29,7 +29,7 @@
             <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top navbar-fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Welcome</a>
+          <a class="navbar-brand" href="../index.html">Welcome</a>
           <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon custom-toggler"></span>
           </button>
@@ -58,48 +58,48 @@
      
   <div class="row"  id="skill-images">
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-      <img style="width:100%;" class="img-skills" src="img/html-logo.png">
+      <img style="width:100%;" class="img-skills" src="../img/html-logo.png">
     </div>
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-        <img style="width:100%;" class="img-skills" src="img/csslogo.png">
+        <img style="width:100%;" class="img-skills" src="../img/csslogo.png">
     </div>
 
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-      <img style="width:100%" class="img-skills" src="img/javascript-logo.png">
+      <img style="width:100%" class="img-skills" src="../img/javascript-logo.png">
   </div>
 
   <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/jquery-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/jquery-logo.png">
 </div>
 
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-      <img style="width:100%;" class="img-skills" src="img/bootstrap-logo.png">
+      <img style="width:100%;" class="img-skills" src="../img/bootstrap-logo.png">
   </div>
 
   <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/git.png">
+    <img style="width:100%;" class="img-skills" src="../img/git.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/sass-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/sass-logo.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/photoshop-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/photoshop-logo.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/sketch-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/sketch-logo.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/illustrator-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/illustrator-logo.png">
 </div>
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/premiere-pro.png">
+    <img style="width:100%;" class="img-skills" src="../img/premiere-pro.png">
 </div>
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/aftereffects-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/aftereffects-logo.png">
 </div>
 <!-- PAGE CONTENT -->
 
@@ -114,7 +114,7 @@
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <!-- CARD VIDAPP -->
           <div class="card h-100">
-            <a href="https://www.freecodecamp.org/certification/fcc78f01584-e43e-4901-8440-289694e7584e/responsive-web-design" target="_blank"><img class="card-img-top hvr-float " src="img/fcccertificate.png" alt=""></a>
+            <a href="https://www.freecodecamp.org/certification/fcc78f01584-e43e-4901-8440-289694e7584e/responsive-web-design" target="_blank"><img class="card-img-top hvr-float " src="../FreeCodeCamp/img/fcccertificate.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#" class="text-dark">Web Responsive Design Certificate</a>
@@ -152,7 +152,7 @@
           <!-- CARD YOOBEE COLLEGE -->
         <div class="col-lg-4 col-sm-6 portfolio-item ">
           <div class="card h-100">
-            <a href="FreeCodeCamp/Freecodecamp Project 2/index.html" target="_blank"><img class="card-img-top hvr-float " src="FreeCodeCamp/img/fcc-project2.png"></a>
+            <a href="Freecodecamp Project 2/index.html" target="_blank"><img class="card-img-top hvr-float " src="img/fcc-project2.png"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Survey Form</a>
@@ -160,7 +160,7 @@
               <p class="card-text">Even though CSS Grid is challenging to remember and implement it on a website, I managed to create it by watching tutorials and self direct learning.
                 In this age every developer should know CSS Grid, so thought to give it a go and put it on my portfolio to show my range of skills.
               </p>
-              <a href="FreeCodeCamp/Freecodecamp Project 2/index.html" target="_blank"><button type="button" class="btn btn-lg btn-dark">Project 2</button></a> 
+              <a href="Freecodecamp Project 2/index.html" target="_blank"><button type="button" class="btn btn-lg btn-dark">Project 2</button></a> 
               
             </div>
           </div>
@@ -170,7 +170,7 @@
           <!-- CARD FREECODECAMP -->
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="FreeCodeCamp/FreeCodeCamp Project 3/index.html" target="_blank"><img class="card-img-top hvr-float " src="FreeCodeCamp/img/fcc-project3.png" alt=""></a>
+            <a href="FreeCodeCamp Project 3/index.html" target="_blank"><img class="card-img-top hvr-float " src="img/fcc-project3.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Product Landing Page</a>
@@ -178,7 +178,7 @@
               <p class="card-text">Portfolio website I've created to be responsive, whch I thought I'm going to use it but since I've created
                 this one and learned new skills will constantly be updating new websites!
               </p>
-              <a href="FreeCodeCamp/FreeCodeCamp Project 3/index.html" target="_blank"><button type="button" class="btn btn-lg btn-dark">Project 3</button></a> 
+              <a href="FreeCodeCamp Project 3/index.html" target="_blank"><button type="button" class="btn btn-lg btn-dark">Project 3</button></a> 
             </div>
           </div>
         </div>
@@ -187,7 +187,7 @@
           <!-- CARD CHESTER TOURIST-->
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="FreeCodeCamp/FreeCodeCamp Project 4/index.html" target="_blank"><img class="card-img-top hvr-float " src="FreeCodeCamp/img/fcc-project4.png" alt=""></a>
+            <a href="FreeCodeCamp Project 4/index.html" target="_blank"><img class="card-img-top hvr-float " src="img/fcc-project4.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Technical Documentation Page</a>
@@ -195,7 +195,7 @@
               <p class="card-text">Recreated ASOS website & created the app by my imagination using their brand colours. This is actually my first sketch
                 project which I've worked on
               </p>
-              <a href="FreeCodeCamp/FreeCodeCamp Project 4/index.html" target="_blank"><button type="button" style="color:white;" class="btn btn-lg btn-dark">Project 4</button></a> 
+              <a href="FreeCodeCamp Project 4/index.html" target="_blank"><button type="button" style="color:white;" class="btn btn-lg btn-dark">Project 4</button></a> 
             </div>
           </div>
         </div>
@@ -203,7 +203,7 @@
 
           <div class="col-lg-4 col-sm-6 portfolio-item">
               <div class="card h-100">
-                <a href="index.html" target="_blank"><img class="card-img-top hvr-float " src="FreeCodeCamp/img/fcc-project5.png" alt=""></a>
+                <a href="../index.html" target="_blank"><img class="card-img-top hvr-float " src="img/fcc-project5.png" alt=""></a>
                 <div class="card-body">
                   <h4 class="card-title">
                     <a href="#">Personal Portfolio Webpage</a>
@@ -211,7 +211,7 @@
                   <p class="card-text">Recreated ASOS website & created the app by my imagination using their brand colours. This is actually my first sketch
                     project which I've worked on
                   </p>
-                  <a href="index.html" target="_blank"><button type="button" style="color:white;" class="btn btn-lg btn-dark">Project 5</button></a> 
+                  <a href="../index.html" target="_blank"><button type="button" style="color:white;" class="btn btn-lg btn-dark">Project 5</button></a> 
                 </div>
               </div>
             </div>
@@ -262,10 +262,10 @@
       <!-- /.container -->
     </footer>
 
-    <script src="vendor/js/js.js"></script>    
+    <script src="../vendor/js/js.js"></script>    
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   </body>
 
