--- a/New World/newworld.html
+++ b/New World/newworld.html
@@ -8,14 +8,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha256-HAaDW5o2+LelybUhfuk0Zh2Vdk8Y2W2UeKmbaXhalfA=" crossorigin="anonymous" />
-    <title>Erind Hoxha - Get Work Done</title>git 
+    <title>Erind Hoxha - Get Work Done</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- Custom styles for this template -->
-    <link href="css/3-col-portfolio.css" rel="stylesheet">
+    <link href="../css/3-col-portfolio.css" rel="stylesheet">
 
   </head>
 
@@ -28,7 +28,7 @@
 
           <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top light-navbar-fixed-top">
               <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Welcome</a>
+                <a class="navbar-brand" href="../index.html">Welcome</a>
                 <button class="navbar-toggler custom-toggler-light" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon custom-toggler-light"></span>
                 </button>
@@ -59,48 +59,48 @@
      
   <div class="row"  id="skill-images">
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-      <img style="width:100%;" class="img-skills" src="img/html-logo.png">
+      <img style="width:100%;" class="img-skills" src="../img/html-logo.png">
     </div>
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-        <img style="width:100%;" class="img-skills" src="img/csslogo.png">
+        <img style="width:100%;" class="img-skills" src="../img/csslogo.png">
     </div>
 
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-      <img style="width:100%" class="img-skills" src="img/javascript-logo.png">
+      <img style="width:100%" class="img-skills" src="../img/javascript-logo.png">
   </div>
 
   <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/jquery-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/jquery-logo.png">
 </div>
 
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-      <img style="width:100%;" class="img-skills" src="img/bootstrap-logo.png">
+      <img style="width:100%;" class="img-skills" src="../img/bootstrap-logo.png">
   </div>
 
   <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/git.png">
+    <img style="width:100%;" class="img-skills" src="../img/git.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/sass-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/sass-logo.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/photoshop-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/photoshop-logo.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/sketch-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/sketch-logo.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/illustrator-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/illustrator-logo.png">
 </div>
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/premiere-pro.png">
+    <img style="width:100%;" class="img-skills" src="../img/premiere-pro.png">
 </div>
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/aftereffects-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/aftereffects-logo.png">
 </div>
 <!-- PAGE CONTENT -->
 
@@ -114,7 +114,7 @@
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <!-- CARD VIDAPP -->
           <div class="card h-100">
-            <a href="cheeseadvertisements.html" target="_blank"><img class="card-img-top hvr-float " src="New World/img/cheese-card-image.png" alt=""></a>
+            <a href="cheeseadvertisements.html" target="_blank"><img class="card-img-top hvr-float " src="img/cheese-card-image.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#" class="text-dark">New World Cheese Advertising</a>
@@ -131,7 +131,7 @@
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <!-- CARD ANIMATION COLLEGE -->
           <div class="card h-100">
-            <a href="newworldposters.html" target="_blank"><img class="card-img-top hvr-float" src="New World/img/posters-card-image.png" alt=""></a>
+            <a href="newworldposters.html" target="_blank"><img class="card-img-top hvr-float" src="img/posters-card-image.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">New World Posters</a>
