--- a/index.html
+++ b/index.html
@@ -168,6 +168,22 @@
             </div>
             
       <div class="row">
+
+          <div class="col-lg-4 col-sm-6 portfolio-item mobile">
+              <!-- CARD VIDAPP -->
+              <div class="card h-100">
+                <a href="hardshell/index.html"><img class="card-img-top hvr-float" src="tvnz/tvnz-card-image.png" alt=""></a>
+                <div class="card-body">
+                  <h4 class="card-title">
+                    <a href="vidapp.html" class="text-dark">Robert Walters Hackathon - TVNZ Hack</a>
+                  </h4>
+                  <p class="card-text">Winner of 2018 Hackathon
+                  </p>
+                </div>
+              </div>
+              <!-- CARD VIDAPP -->
+            </div>
+
           <div class="col-lg-4 col-sm-6 portfolio-item mobile">
               <!-- CARD VIDAPP -->
               <div class="card h-100">
@@ -219,7 +235,7 @@
           <!-- CARD YOOBEE COLLEGE -->
         <div class="col-lg-4 col-sm-6 portfolio-item web">
           <div class="card h-100">
-            <a href="yoobee.html"><img class="card-img-top hvr-float" src="yoobee/yoobee-school-image.png" alt=""></a>
+            <a href="yoobee/yoobee.html"><img class="card-img-top hvr-float" src="yoobee/yoobee-school-image.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="yoobee.html">Yoobee Design School Projects</a>
@@ -233,7 +249,7 @@
           <!-- CARD FREECODECAMP -->
         <div class="col-lg-4 col-sm-6 portfolio-item web">
           <div class="card h-100">
-            <a href="freecodecamp.html"><img class="card-img-top hvr-float" src="FreeCodeCamp/img/freecodecamp-logo.png" alt=""></a>
+            <a href="FreeCodeCamp/freecodecamp.html"><img class="card-img-top hvr-float" src="FreeCodeCamp/img/freecodecamp-logo.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="freecodecamp.html">freeCodeCamp Projects</a>
@@ -248,7 +264,7 @@
           <!-- CARD NEW WORLD -->
         <div class="col-lg-4 col-sm-6 portfolio-item design">
           <div class="card h-100">
-            <a href="newworld.html"><img class="card-img-top hvr-float" src="New World/new-world-logo.png" alt=""></a>
+            <a href="New World/newworld.html"><img class="card-img-top hvr-float" src="New World/new-world-logo.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="newworld.html">New World Project</a>
