--- a/yoobee/yoobee.html
+++ b/yoobee/yoobee.html
@@ -11,10 +11,10 @@
     <title>Erind Hoxha - Get Work Done</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/3-col-portfolio.css" rel="stylesheet">
+    <link href="../css/3-col-portfolio.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
 
@@ -23,7 +23,7 @@
             <!-- Navigation -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top light-navbar-fixed-top">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="index.html">Welcome</a>
+                  <a class="navbar-brand" href="../index.html">Welcome</a>
                   <button class="navbar-toggler custom-toggler-light" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon custom-toggler-light"></span>
                   </button>
@@ -57,48 +57,48 @@
      
   <div class="row"  id="skill-images">
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-      <img style="width:100%;" class="img-skills" src="img/html-logo.png">
+      <img style="width:100%;" class="img-skills" src="../img/html-logo.png">
     </div>
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-        <img style="width:100%;" class="img-skills" src="img/csslogo.png">
+        <img style="width:100%;" class="img-skills" src="../img/csslogo.png">
     </div>
 
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-      <img style="width:100%" class="img-skills" src="img/javascript-logo.png">
+      <img style="width:100%" class="img-skills" src="../img/javascript-logo.png">
   </div>
 
   <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/jquery-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/jquery-logo.png">
 </div>
 
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-      <img style="width:100%;" class="img-skills" src="img/bootstrap-logo.png">
+      <img style="width:100%;" class="img-skills" src="../img/bootstrap-logo.png">
   </div>
 
   <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/git.png">
+    <img style="width:100%;" class="img-skills" src="../img/git.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/sass-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/sass-logo.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/photoshop-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/photoshop-logo.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/sketch-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/sketch-logo.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/illustrator-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/illustrator-logo.png">
 </div>
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/premiere-pro.png">
+    <img style="width:100%;" class="img-skills" src="../img/premiere-pro.png">
 </div>
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/aftereffects-logo.png">
+    <img style="width:100%;" class="img-skills" src="../img/aftereffects-logo.png">
 </div>
 <!-- PAGE CONTENT -->
 
@@ -113,7 +113,7 @@
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <!-- CARD VIDAPP -->
           <div class="card h-100">
-            <a href="ChesterTourist Simple Grid/index.html" target="_blank"><img class="card-img-top hvr-float " src="img/chester-tourist-image.png" alt=""></a>
+            <a href="ChesterTourist/index.html"target="_blank"><img class="card-img-top hvr-float " src="../img/chester-tourist-image.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#" class="text-dark">Chester Tourist</a>
@@ -122,7 +122,7 @@
                 and created Lean Personas/Prototyped then created the website. You can check my presentation <a href="https://drive.google.com/open?id=1411ty-SZnLVrOI4P8SMcBTS5ZEeRRyzN" target="_blank">here.</a>
               </p>
               <br>
-              <a href="ChesterTourist Simple Grid/index.html" target="_blank"><button type="button" class="btn btn-lg btn-dark mt-2 mb-2">Website</button></a> 
+              <a href="ChesterTourist/index.html" target="_blank"><button type="button" class="btn btn-lg btn-dark mt-2 mb-2">Website</button></a> 
               <a href="https://sketch.cloud/s/kQK2O" target="_blank"><button type="button" style="color:white;" class="btn btn-lg mt-2 mb-2 btn-danger">Sketch Prototype</button></a>
             </div>
           </div>
@@ -132,7 +132,7 @@
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <!-- CARD ANIMATION COLLEGE -->
           <div class="card h-100">
-            <a href="/Goodfood/index.html" target="_blank"><img class="card-img-top hvr-float" src="Goodfood/goodfood-card-image.png" alt=""></a>
+            <a href="Goodfood/index.html" target="_blank"><img class="card-img-top hvr-float" src="Goodfood/goodfood-card-image.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Goodfood Re-creation</a>
@@ -142,9 +142,7 @@
                 Used HTML, CSS, JavaScript & jQuery.
                 <br><br>&copy; Product of GoodFood
               </p>
-              <a href="Goodfood/index.html" target="_blank"><button type="button" class="btn btn-lg btn-dark">Website</button></a> 
-              <a href="goodfood/desktop.jpg" target="_blank"><button type="button" style="color:white;" class="btn btn-lg btn-danger">Desktop & Mobile</button></a>
-              
+              <a href="Goodfood/index.html" target="_blank"><button type="button" class="btn btn-lg btn-dark">Website</button></a>               
             </div>
           </div>
         </div>
@@ -154,7 +152,7 @@
           <!-- CARD YOOBEE COLLEGE -->
         <div class="col-lg-4 col-sm-6 portfolio-item ">
           <div class="card h-100">
-            <a href="CSS Grid/index.html" target="_blank"><img class="card-img-top hvr-float " src="img/cssgrid.png" alt=""></a>
+            <a href="CSS Grid/index.html" target="_blank"><img class="card-img-top hvr-float " src="../img/cssgrid.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Website using CSS Grid</a>
@@ -172,7 +170,7 @@
           <!-- CARD FREECODECAMP -->
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="Erind Hoxha Portfolio 2/index.html" target="_blank"><img class="card-img-top hvr-float " src="img/yoobeeportfolioimage.png" alt=""></a>
+            <a href="Erind Hoxha Portfolio 2/index.html" target="_blank"><img class="card-img-top hvr-float " src="yoobeeportfolioimage.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Responsive Portfolio Website</a>
@@ -189,7 +187,7 @@
           <!-- CARD CHESTER TOURIST-->
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="https://sketch.cloud/s/7aEvZ" target="_blank"><img class="card-img-top hvr-float " src="img/asosimage.png" alt=""></a>
+            <a href="https://sketch.cloud/s/7aEvZ" target="_blank"><img class="card-img-top hvr-float " src="asosimage.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">ASOS Re-creation</a>
