--- a/Dota2quiz/index.html
+++ b/Dota2quiz/index.html
@@ -41,10 +41,10 @@
 			</li>
 		  </ul>
 		</div>
-	  </nav>
-		<div class="jumbotron-bg">
-			<img class="img" src="img/dota2quizbanner2.png">
-		  </div>
+		</nav>
+		<header class="header">
+			<img class="img2" src="img/dota2quizbanner2.png">
+		</header>
 	  <section>
 	  <div class="container mt-5">
 		  <div class="row">
