--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 
         <div class="text-container">
           <img src="img/erind.png" style="width:130px" class="mb-3">
-            <h1 class="display-4 text-black">Designer, Junior Front-end Developer.</h1>
+            <h1 class="display-4 text-black">Junior Front-end Developer & Designer.</h1>
             <p class="lead text-black mb-5">I code, design beautiful and simple things, and I enjoy what I do</p>
           <div class="row justify-content-center">
-          <button type="button" class="btn btn-dark btn-lg button-cv" id="button-scroll" href="#" role="button">See more</button>
+          <button type="button" style="background-color:#5000ff" class="btn btn-light text-light btn-lg button-cv" id="button-scroll" href="#" role="button">See more</button>
         </div>
         </p>
       </div>
