--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top navbar-fixed-top">
         <div class="container-fluid ">
           <a class="navbar-brand" href="#"><img id="imagelogo" style="width:80%" src="ehox.png"></a>
-          <a class="navbar-brand" href="#"><button type="button" class="btn btn-info btn-sos">Contact me</button></a>
+          <a class="navbar-brand" href="#"><button type="button" class="btn btn-info btn-sos">CV</button></a>
 
 
           <!-- <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,10 +80,10 @@
 
         <div class="text-container">
           <img src="img/erind.png" style="width:130px" class="mb-3">
-            <h1 class="display-4 text-black">Junior Front-end Developer & Designer.</h1>
-            <p class="lead text-black mb-5">I code, design beautiful and simple things, and I enjoy what I do</p>
+            <h1 class="display-4 text-black">Hi I'm Erind.</h1>
+            <p class="lead text-black mb-5">I'm a Junior Front-End Developer / Graphic Designer. I code, design beautiful and simple things, and I enjoy what I do</p>
           <div class="row justify-content-center">
-          <button type="button" style="background-color:#5000ff" class="btn btn-light text-light btn-lg button-cv" id="button-scroll" href="#" role="button">See more</button>
+          <a href="#portfolio-work"><div class="arrow-down hvr-grow"></div></a>
         </div>
         </p>
       </div>
@@ -150,7 +150,7 @@
     <div class="p-5">
     <h1 class="pt-5">Hi I'm Erind, nice to meet you.</h1>
    <p class="col-sm-9 col-lg-6 col-12 pb-5" style="width:100%; margin:0 auto;">Since beginning my journey as a freelance designer nearly 3 years ago, I've done remote work for agencies, consulted for startups, and collaborated with talented people to create digital products for both business and consumer use. I'm quietly confident, naturally curious, and perpetually improving my chops</p>
-  <button type="button" class="btn btn-lg bg-danger text-white button-cv">Download my CV</button>
+  <button type="button" style="border-radius:0;" class="btn btn-lg bg-danger text-white button-cv">CV</button>
 </div>
 </div>
 
@@ -161,10 +161,10 @@
       <div class="container text-center mt-5" id="portfolio-work">
 
           <div class="btn-group mb-5 mt-5" role="group" aria-label="Basic example">
-              <button type="button" class="btn btn-lg btn-default bg-light text-dark mobile-button">Mobile</button>
-              <button type="button" class="btn btn-lg btn-default bg-light text-dark web-button">Web Development</button>
-              <button type="button" class="btn btn-lg btn-default bg-light text-dark design-button">Design</button>
-              <button type="button" class="btn btn-lg btn-default bg-light text-dark all-button">All</button>
+              <button type="button" style="border-radius:0;" class="btn btn-lg btn-default bg-dark text-light mobile-button">Mobile</button>
+              <button type="button" style="border-radius:0;" class="btn btn-lg btn-default bg-dark text-light web-button">Web Development</button>
+              <button type="button" style="border-radius:0;" class="btn btn-lg btn-default bg-dark text-light design-button">Design</button>
+              <button type="button" style="border-radius:0;" class="btn btn-lg btn-default bg-dark text-light all-button">All</button>
             </div>
             
       <div class="row">
@@ -343,7 +343,7 @@
 
   </div>
 
-  <div id="testimonials" class="container mt-5 mb-5 justify-content-center text-center">
+  <!-- <div id="testimonials" class="container mt-5 mb-5 justify-content-center text-center">
       <h1 id="testimonials-header">Testimonials</h1>
       <p id="testimonials-paragraph">People I've worked with have some good words.</p>
     <div class="row justify-content-center">
@@ -356,70 +356,8 @@
         </blockquote>
       </div>
   </div>
-</div>
-
-<!-- 
-<div class="card col-md-6 mt-5 mb-5">
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="100000">
-    <div class="w-100 carousel-inner" role="listbox">
-      <div class="carousel-item active">
-        <div class="carousel-caption">
-          <div class="row">
-            <div class="col-sm-3">
-              <img src="http://via.placeholder.com/200x200" alt="" class="rounded-circle img-fluid" />
-            </div>
-            <div class="col-sm-9">
-              <h3>Gives me hope</h3>
-              <small>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
-                metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</small>
-              <small class="smallest mute">- Yayo Dudemous</small>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="carousel-caption">
-          <div class="row">
-            <div class="col-sm-3">
-              <img src="http://via.placeholder.com/200x200" alt="" class="rounded-circle img-fluid">
-            </div>
-            <div class="col-sm-9">
-              <h3>You will love it.</h3>
-              <small>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
-                metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</small>
-              <small class="smallest mute">- Yayo Dudemous</small>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="carousel-caption">
-          <div class="row">
-            <div class="col-sm-3">
-              <img src="http://via.placeholder.com/200x200" alt="" class="rounded-circle img-fluid">
-            </div>
-            <div class="col-sm-9">
-              <h3>Velvet pouch!</h3>
-              <small>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
-                metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</small>
-              <small class="smallest mute">- Yayo Dudemous</small>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="float-right navi">
-      <a class="" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon ico" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon ico" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
 </div> -->
+
 <div id="contact-me" class="container">
 
 </div>
