--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top navbar-fixed-top">
         <div class="container-fluid ">
           <a class="navbar-brand" href="#"><img id="imagelogo" style="width:80%" src="ehox.png"></a>
-          <a class="navbar-brand" href="#"><button type="button" class="btn btn-info btn-sos">CV</button></a>
+          <a class="navbar-brand" href="#"><button type="button" class="btn btn-info btn-sos" style="background-color:#5000ff; border:none;">CV</button></a>
 
 
           <!-- <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -162,11 +162,11 @@
       <!-- Page Heading -->
       <div class="container text-center mt-5" id="portfolio-work">
 
-          <div class="btn-group mb-5 mt-5" role="group" aria-label="Basic example">
-              <button type="button" style="border-radius:0;" class="btn btn-lg btn-default bg-dark text-light mobile-button">Mobile</button>
-              <button type="button" style="border-radius:0;" class="btn btn-lg btn-default bg-dark text-light web-button">Web Development</button>
-              <button type="button" style="border-radius:0;" class="btn btn-lg btn-default bg-dark text-light design-button">Design</button>
-              <button type="button" style="border-radius:0;" class="btn btn-lg btn-default bg-dark text-light all-button">All</button>
+          <div class="btn-group mb-5 mt-5" role="group" aria-label="Basic example" >
+              <button type="button" style="border-radius:0;" class="btn btn-lg btn-default  text-dark mobile-button"><i class="fa fa-mobile" aria-hidden="true"></i> Apps</button>
+              <button type="button" style="border-radius:0;" class="btn btn-lg btn-default  text-dark web-button"><i class="fa fa-tv"></i> Webs</button>
+              <button type="button" style="border-radius:0;" class="btn btn-lg btn-default  text-dark design-button"><i class="fa fa-paint-brush"></i> Designs</button>
+              <button type="button" style="border-radius:0;" class="btn btn-lg btn-default bg-transparent  text-dark all-button">All</button>
             </div>
             
       <div class="row">
@@ -366,7 +366,7 @@
     <!-- /.container -->
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark text-center">
+    <footer class="py-5 text-center" style="background-color:#000;">
       <div class="container">
         <p class="m-0 text-center text-white pb-3"><img class="invert-footer" src="ehox.png"></p>
         <p class="m-0 text-center text-white">Erind Hoxha - Web & Graphic - Auckland 2018</p>
