--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
           <div class="col-lg-4 col-sm-6 portfolio-item mobile">
               <!-- CARD VIDAPP -->
               <div class="card h-100">
-                <a href="tvnz/index.html"><img class="card-img-top hvr-float" src="tvnz/tvnz-card-image.png" alt=""></a>
+                <a href="https://erind.hoxha.yoobee.net.nz/tvnzhack/index.html"><img class="card-img-top hvr-float" src="tvnz/tvnz-card-image.png" alt=""></a>
                 <div class="card-body">
                   <h4 class="card-title">
-                    <a href="vidapp.html" class="text-dark">Robert Walters Hackathon - TVNZ Hack</a>
+                    <a href="https://erind.hoxha.yoobee.net.nz/tvnzhack/index.html" class="text-dark">Robert Walters Hackathon - TVNZ Hack</a>
                   </h4>
                   <p class="card-text">Winner of 2018 Hackathon
                   </p>
@@ -204,10 +204,10 @@
         <div class="col-lg-4 col-sm-6 portfolio-item mobile">
           <!-- CARD VIDAPP -->
           <div class="card h-100">
-            <a href="vidapp.html"><img class="card-img-top hvr-float" src="vidapp/vidapp-card-image.png" alt=""></a>
+            <a href="https://www.vidapp.com" target="_blank"><img class="card-img-top hvr-float" src="vidapp/vidapp-card-image.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="vidapp.html" class="text-dark">Vidapp Projects</a>
+                <a href="https://www.vidapp.com" target="_blank" class="text-dark">Vidapp Projects</a>
               </h4>
               <p class="card-text">Currently work here as a Graphic Designer & Junior Front End Developer, here you can see some of my work examples
                 which are a mixture of UI/UX Design, Graphic Design & Front End Development.
@@ -242,7 +242,7 @@
               <h4 class="card-title">
                 <a href="yoobee.html">Yoobee Design School Projects</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
+              <p class="card-text">Level 6 Diploma on Web & UX, currently working on these projects.</p>
             </div>
           </div>
         </div>
@@ -256,7 +256,7 @@
               <h4 class="card-title">
                 <a href="freecodecamp.html">freeCodeCamp Projects</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+              <p class="card-text">An online place to learn & code, and some projects which I've done while I was learning myself coding here.</p>
             </div>
           </div>
         </div>
@@ -271,7 +271,7 @@
               <h4 class="card-title">
                 <a href="newworld.html">New World Project</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+              <p class="card-text">Some projects I've done for New World, mostly Graphic Design & UX Researching.</p>
             </div>
           </div>
         </div>
@@ -285,7 +285,7 @@
                 <h4 class="card-title">
                   <a href="dotaquiz.html">Dota Quiz</a>
                 </h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p class="card-text">Dota Quiz that I'm working on, still on progress.</p>
               </div>
             </div>
           </div>
