--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="text-container">
           <img src="img/erind.png" style="width:130px" class="mb-3">
             <h1 class="display-4 text-black">Hi I'm Erind.</h1>
-            <p class="lead text-black mb-5">I'm a Junior Front-End Developer / Graphic Designer. I code, design beautiful and simple things, and I enjoy what I do</p>
+            <p class="lead text-black mb-5">I'm a Junior Front-End Developer / Graphic Designer. I code, design and constantly learning to code beautiful and simple things, and I enjoy what I do.</p>
           <div class="row justify-content-center">
           <a href="#portfolio-work"><div class="arrow-down hvr-grow"></div></a>
         </div>
